# metabrowser

./: Cargo.toml  README.md
contrib/: metabrowser.example.yaml  metabrowser.example.yml
src/: command.rs  config.rs  install.rs  main.rs  url.rs
