[package]
name = "metabrowser"
authors = ["Barret Rennie <barret@brennie.ca>"]
description = "Open URLs in specific browsers, based on a set of rules."
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
